--- a/packages/create-waltz-app/package.json
+++ b/packages/create-waltz-app/package.json
@@ -11,6 +11,10 @@
   "scripts": {
     "build": "tsc"
   },
+  "files": [
+    "bin",
+    "dist"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC"
