--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,7 +2,7 @@
   "name": "@waltz-ui/ui",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/ui.mjs",
   "types": "dist/index.d.ts",
   "publishConfig": {
     "access": "public"
@@ -18,25 +18,27 @@
     ".": "./dist/ui.mjs",
     "./*": "./dist/*"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "maska": "^1.4.6"
   },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.2.3",
+    "rollup-plugin-typescript2": "^0.35.0",
+    "waltz-build": "file:../waltz-build",
+    "vite": "^4.4.8",
+    "vite-plugin-dts": "^3.3.0",
+    "vite-plugin-static-copy": "^0.17.0"
+  },
   "peerDependencies": {
     "@waltz-ui/web": "file:../web",
     "@sonata-api/common": "latest",
     "@sonata-api/system": "latest",
     "@sonata-api/types": "latest"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "rollup-plugin-typescript2": "^0.35.0",
-    "sass": "^1.55.0",
-    "waltz-build": "file:../waltz-build",
-    "vite": "^4.4.8",
-    "vite-plugin-dts": "^3.3.0",
-    "vite-plugin-static-copy": "^0.17.0"
   }
 }
