--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@waltz-ui/ui",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/ui.mjs",
   "types": "dist/index.d.ts",
@@ -30,15 +30,15 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "rollup-plugin-typescript2": "^0.35.0",
-    "waltz-build": "file:../waltz-build",
     "vite": "^4.4.8",
     "vite-plugin-dts": "^3.3.0",
-    "vite-plugin-static-copy": "^0.17.0"
+    "vite-plugin-static-copy": "^0.17.0",
+    "waltz-build": "file:../waltz-build"
   },
   "peerDependencies": {
-    "@waltz-ui/web": "file:../web",
     "@sonata-api/common": "latest",
     "@sonata-api/system": "latest",
-    "@sonata-api/types": "latest"
+    "@sonata-api/types": "latest",
+    "@waltz-ui/web": "file:../web"
   }
 }
