--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@waltz-ui/web",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
@@ -39,7 +39,7 @@
     "vue-router": "^4.2.1"
   },
   "devDependencies": {
-    "vite": "^4.4.8",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite": "^4.4.8"
   }
 }
