--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
     "publish": "./bin/publish.sh"
   },
   "workspaces": [
-    "packages/create-waltz-app",
-    "packages/ui",
-    "packages/waltz-build",
-    "packages/waltz-ui",
-    "packages/web"
+    "packages/*"
   ],
   "dependencies": {},
   "devDependencies": {
