--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@waltz-ui/ui",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/ui.mjs",
   "types": "dist/index.d.ts",
@@ -33,7 +33,7 @@
     "vite": "^4.4.8",
     "vite-plugin-dts": "^3.3.0",
     "vite-plugin-static-copy": "^0.17.0",
-    "waltz-build": "file:../waltz-build"
+    "waltz-build": "latest"
   },
   "peerDependencies": {
     "@sonata-api/common": "latest",
