--- a/packages/waltz-ui/package.json
+++ b/packages/waltz-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "waltz-ui",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,7 +19,7 @@
     "dist"
   ],
   "dependencies": {
-    "@waltz-ui/ui": "latest",
-    "@waltz-ui/web": "latest"
+    "@waltz-ui/ui": "file:../ui",
+    "@waltz-ui/web": "file:../web"
   }
 }
