--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,11 +32,13 @@
     "rollup-plugin-typescript2": "^0.35.0",
     "vite": "^4.4.8",
     "vite-plugin-dts": "^3.3.0",
-    "vite-plugin-static-copy": "^0.17.0"
+    "vite-plugin-static-copy": "^0.17.0",
+    "waltz-build": "^0.0.0"
   },
   "peerDependencies": {
     "@sonata-api/common": "latest",
     "@sonata-api/system": "latest",
-    "@sonata-api/types": "latest"
+    "@sonata-api/types": "latest",
+    "@waltz-ui/web": "^0.0.0"
   }
 }
