--- a/packages/waltz-ui/package.json
+++ b/packages/waltz-ui/package.json
@@ -17,5 +17,9 @@
   "license": "ISC",
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "@waltz-ui/ui": "^0.0.0",
+    "@waltz-ui/web": "^0.0.0"
+  }
 }
