--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,13 +31,12 @@
     "@sonata-api/system": "^0.0.0",
     "@sonata-api/types": "^0.0.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@waltz-ui/web": "^0.0.0",
     "rollup-plugin-typescript2": "^0.35.0",
     "vite": "^4.4.8",
     "vite-plugin-dts": "^3.3.0",
     "vite-plugin-static-copy": "^0.17.0",
     "waltz-build": "^0.0.0"
   },
-  "peerDependencies": {
-    "@waltz-ui/web": "^0.0.0"
-  }
+  "gitHead": "12d7d861731240d2cfc40104def04406dae1d0b1"
 }
