--- a/packages/waltz-ui/package.json
+++ b/packages/waltz-ui/package.json
@@ -21,5 +21,6 @@
   "dependencies": {
     "@waltz-ui/ui": "^0.0.0",
     "@waltz-ui/web": "^0.0.0"
-  }
+  },
+  "gitHead": "12d7d861731240d2cfc40104def04406dae1d0b1"
 }
