--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,7 +12,7 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "prepublishOnly": "npm run build",
-    "postinstall": "node dist/__scripts__/postinstall.js"
+    "postinstall": "node dist/__scripts__/postinstall.js || true"
   },
   "repository": {
     "type": "git",
@@ -29,9 +29,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sonata-api/common": "latest",
-    "@sonata-api/system": "latest",
-    "@sonata-api/types": "latest",
+    "@sonata-api/common": "*",
+    "@sonata-api/system": "*",
+    "@sonata-api/types": "*",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-demi": "^0.13.6",
