--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,20 +25,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sonata-api/common": "latest"
+    "@sonata-api/common": "*"
   },
   "devDependencies": {
-    "@sonata-api/system": "^0.0.0",
-    "@sonata-api/types": "^0.0.0",
+    "@sonata-api/system": "*",
+    "@sonata-api/types": "*",
     "@vitejs/plugin-vue": "^4.2.3",
     "rollup-plugin-typescript2": "^0.35.0",
     "vite": "^4.4.8",
     "vite-plugin-dts": "^3.3.0",
     "vite-plugin-static-copy": "^0.17.0",
-    "waltz-build": "^0.0.0"
+    "waltz-build": "*"
   },
   "peerDependencies": {
-    "@waltz-ui/web": "^0.0.0"
+    "@waltz-ui/web": "*"
   },
   "gitHead": "12d7d861731240d2cfc40104def04406dae1d0b1"
 }
