--- a/packages/waltz-build/package.json
+++ b/packages/waltz-build/package.json
@@ -27,10 +27,10 @@
   "license": "ISC",
   "dependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "@sonata-api/common": "latest",
-    "@sonata-api/types": "latest",
+    "@sonata-api/common": "*",
+    "@sonata-api/types": "*",
     "@vitejs/plugin-vue": "^4.1.0",
-    "braun": "latest",
+    "braun": "*",
     "ejs": "^3.1.9",
     "js-yaml": "^4.1.0",
     "mini-css-extract-plugin": "^2.7.3",
@@ -47,6 +47,6 @@
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "bson": "latest"
+    "bson": "*"
   }
 }
