--- a/packages/waltz-ui/package.json
+++ b/packages/waltz-ui/package.json
@@ -19,8 +19,8 @@
     "dist"
   ],
   "dependencies": {
-    "@waltz-ui/ui": "latest",
-    "@waltz-ui/web": "latest"
+    "@waltz-ui/ui": "*",
+    "@waltz-ui/web": "*"
   },
   "gitHead": "12d7d861731240d2cfc40104def04406dae1d0b1"
 }
