--- a/packages/waltz-build/package.json
+++ b/packages/waltz-build/package.json
@@ -2,6 +2,9 @@
   "name": "waltz-build",
   "version": "0.0.1",
   "description": "",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
@@ -22,15 +25,11 @@
     "bin",
     "dist"
   ],
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@sonata-api/common": "*",
     "@sonata-api/types": "*",
     "@vitejs/plugin-vue": "^4.1.0",
-    "braun": "*",
     "ejs": "^3.1.9",
     "js-yaml": "^4.1.0",
     "mini-css-extract-plugin": "^2.7.3",
@@ -39,7 +38,8 @@
     "unplugin-vue-components": "^0.24.1",
     "unplugin-vue-router": "^0.5.5",
     "vite": "^4.3.3",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "waltz-icons": "*"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.2",
