--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,7 +25,8 @@
     "dist"
   ],
   "dependencies": {
-    "@sonata-api/common": "*"
+    "@sonata-api/common": "*",
+    "maska": "^2.1.10"
   },
   "devDependencies": {
     "@sonata-api/system": "*",
