--- a/packages/waltz-ui/tsconfig.json
+++ b/packages/waltz-ui/tsconfig.json
@@ -8,6 +8,14 @@
     ],
     "types": [
       "vite/client"
-    ]
+    ],
+    "path": {
+      "@waltz-ui/ui": [
+        "../ui/dist"
+      ],
+      "@waltz-ui/web": [
+        "../web/dist"
+      ]
+    }
   }
 }
