--- a/packages/waltz-ui/package.json
+++ b/packages/waltz-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "waltz-ui",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,8 +19,8 @@
     "dist"
   ],
   "dependencies": {
-    "@waltz-ui/ui": "*",
-    "@waltz-ui/web": "*"
+    "@waltz-ui/ui": "^0.0.6",
+    "@waltz-ui/web": "^0.0.4"
   },
   "gitHead": "12d7d861731240d2cfc40104def04406dae1d0b1"
 }
