--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@waltz-ui/web",
   "type": "module",
-  "version": "0.0.5",
+  "version": "0.0.4",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -41,5 +41,6 @@
   "devDependencies": {
     "typescript": "^5.1.6",
     "vite": "^4.4.8"
-  }
+  },
+  "gitHead": "1d6ca8fc72c6d648b12621a192462ef35793dcb9"
 }
