--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -32,6 +32,7 @@
     "@sonata-api/common": "*",
     "@sonata-api/system": "*",
     "@sonata-api/types": "*",
+    "@waltz-ui/state-management": "*",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-demi": "^0.13.6",
