--- a/packages/waltz-ui/package.json
+++ b/packages/waltz-ui/package.json
@@ -19,6 +19,7 @@
     "dist"
   ],
   "dependencies": {
+    "@waltz-ui/state-management": "*",
     "@waltz-ui/ui": "^0.0.12",
     "@waltz-ui/web": "^0.0.6"
   },
