--- a/packages/state-management/package.json
+++ b/packages/state-management/package.json
@@ -10,6 +10,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "vue": "^3.3.4"
   },
