--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,7 +18,7 @@
     "access": "public"
   },
   "exports": {
-    ".": "./dist/ui.mjs",
+    ".": "./src/index.ts",
     "./*": "./dist/*"
   },
   "files": [
@@ -39,7 +39,8 @@
     "waltz-build": "^0.0.3"
   },
   "peerDependencies": {
-    "@waltz-ui/web": "*"
+    "@waltz-ui/web": "*",
+    "@waltz-ui/state-management": "*"
   },
   "gitHead": "12d7d861731240d2cfc40104def04406dae1d0b1"
 }
