--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@waltz-ui/ui",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -36,11 +36,11 @@
     "vite": "^4.4.8",
     "vite-plugin-dts": "^3.3.0",
     "vite-plugin-static-copy": "^0.17.0",
-    "waltz-build": "^0.0.3"
+    "waltz-build": "^0.0.4"
   },
   "peerDependencies": {
-    "@waltz-ui/web": "*",
-    "@waltz-ui/state-management": "*"
+    "@waltz-ui/state-management": "*",
+    "@waltz-ui/web": "*"
   },
   "gitHead": "12d7d861731240d2cfc40104def04406dae1d0b1"
 }
