--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@waltz-ui/web",
   "type": "module",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -32,7 +32,7 @@
     "@sonata-api/common": "*",
     "@sonata-api/system": "*",
     "@sonata-api/types": "*",
-    "@waltz-ui/state-management": "*",
+    "@waltz-ui/state-management": "^0.0.1",
     "vue": "^3.3.4",
     "vue-demi": "^0.13.6",
     "vue-i18n": "^9.2.0-beta.16",
