--- a/packages/waltz-build/tsconfig.json
+++ b/packages/waltz-build/tsconfig.json
@@ -3,5 +3,9 @@
   "compilerOptions": {
     "outDir": "dist",
     "module": "commonjs"
-  }
+  },
+  "include": [
+    "@types/*.d.ts",
+    "src"
+  ]
 }
