improve type declaration file

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -4,10 +4,13 @@
     "outDir": "dist",
     "paths": {
       "@waltz-ui/web": [
-        "../web"
+        "../web/dist"
+      ],
+      "@waltz-ui/web/*": [
+        "../web/dist/*"
       ],
       "@waltz-ui/state-management": [
-        "../state-management"
+        "../state-management/dist"
       ]
     }
   },
