--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,7 +23,15 @@
   },
   "exports": {
     ".": "./dist/index.js",
+    "./stores": "./dist/stores/index.js",
     "./types": "./dist/types/index.js"
+  },
+  "typesVersions": {
+    "*": {
+      "stores": [
+        "./dist/stores/index.d.ts"
+      ]
+    }
   },
   "files": [
     "dist"
