--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "husky": "^8.0.3",
     "typescript": "^5.1.6"
   }
 }
