--- a/packages/waltz-build/package.json
+++ b/packages/waltz-build/package.json
@@ -43,8 +43,7 @@
   },
   "devDependencies": {
     "@types/ejs": "^3.1.2",
-    "@types/js-yaml": "^4.0.5",
-    "typescript": "^5.1.6"
+    "@types/js-yaml": "^4.0.5"
   },
   "peerDependencies": {
     "bson": "*"
