--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": true,
     "declaration": true,
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "preserveSymlinks": true
   }
 }
