--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@waltz-ui/ui",
-  "version": "0.0.56",
+  "version": "0.0.57",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -40,6 +40,7 @@
   "peerDependencies": {
     "@sonata-api/common": "*",
     "@waltz-ui/state-management": "*",
-    "@waltz-ui/web": "*"
+    "@waltz-ui/web": "*",
+    "vue-router": "*"
   }
 }
