--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@waltz-ui/web",
   "type": "module",
-  "version": "0.0.30",
+  "version": "0.0.33",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -49,6 +49,7 @@
     "@waltz-ui/state-management": "*"
   },
   "devDependencies": {
+    "@types/node": "^20.8.6",
     "vite": "^4.4.8"
   }
 }
