--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -7,7 +7,8 @@
       "esnext"
     ],
     "types": [
-      "vite/client"
+      "vite/client",
+      "node"
     ],
     "paths": {
       "@sonata-api/common": [
