--- a/packages/waltz-build/package.json
+++ b/packages/waltz-build/package.json
@@ -32,6 +32,7 @@
     "@vitejs/plugin-vue": "^4.1.0",
     "ejs": "^3.1.9",
     "js-yaml": "^4.1.0",
+    "less": "^4.2.0",
     "mini-css-extract-plugin": "^2.7.3",
     "sass": "^1.55.0",
     "unplugin-auto-import": "^0.15.3",
