--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@waltz-ui/ui",
-  "version": "0.0.61",
+  "version": "0.0.63",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,7 +18,7 @@
     "access": "public"
   },
   "exports": {
-    ".": "./src/index.ts",
+    ".": "./dist/ui.mjs",
     "./*": "./dist/*"
   },
   "files": [
@@ -35,7 +35,7 @@
     "vite": "^4.4.8",
     "vite-plugin-dts": "^3.3.0",
     "vite-plugin-static-copy": "^0.17.0",
-    "waltz-build": "^0.0.8"
+    "waltz-build": "^0.0.9"
   },
   "peerDependencies": {
     "@sonata-api/common": "*",
