--- a/packages/waltz-build/package.json
+++ b/packages/waltz-build/package.json
@@ -1,6 +1,6 @@
 {
   "name": "waltz-build",
-  "version": "0.0.9",
+  "version": "0.0.11",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -44,7 +44,8 @@
   },
   "devDependencies": {
     "@types/ejs": "^3.1.2",
-    "@types/js-yaml": "^4.0.5"
+    "@types/js-yaml": "^4.0.5",
+    "@types/node": "^20.8.6"
   },
   "peerDependencies": {
     "bson": "*"
