--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@waltz-ui/ui",
-  "version": "0.0.74",
+  "version": "0.0.77",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,13 +18,13 @@
     "access": "public"
   },
   "exports": {
-    ".": "./src/index.ts",
+    ".": "./dist/ui.mjs",
     "./themes/*": "./themes/*",
     "./*": "./dist/*"
   },
   "files": [
     "dist",
-    "less"
+    "themes"
   ],
   "dependencies": {
     "maska": "^2.1.10"
