chore: update lockfile

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -36,7 +36,7 @@
     "vite": "^4.4.8",
     "vite-plugin-dts": "^3.3.0",
     "vite-plugin-static-copy": "^0.17.0",
-    "waltz-build": "^0.0.16"
+    "waltz-build": "*"
   },
   "peerDependencies": {
     "@sonata-api/common": "*",
