feat: add aeria-sdk

--- a/packages/create-waltz-app/package.json
+++ b/packages/create-waltz-app/package.json
@@ -11,7 +11,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "bin": {
+  "__bin": {
     "create-waltz-app": "bin/index.js"
   },
   "files": [
