--- a/packages/waltz-ui/package.json
+++ b/packages/waltz-ui/package.json
@@ -2,6 +2,7 @@
   "name": "waltz-ui",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
