refactor: multiple major refactors

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@waltz-ui/ui",
   "type": "module",
-  "version": "1.0.8",
+  "version": "1.0.10",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,7 +13,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "main": "dist/ui.mjs",
+  "main": "dist/ui.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
     "access": "public"
