fix: make everything work

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,7 +22,7 @@
     "url": ""
   },
   "exports": {
-    ".": "./src/index.ts",
+    ".": "./dist/index.js",
     "./stores": "./dist/stores/index.js",
     "./types": "./dist/types/index.js"
   },
