feat: add i18n package

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -46,6 +46,7 @@
     "vue-router": "^4.2.1"
   },
   "peerDependencies": {
+    "@waltz-ui/i18n": "*",
     "@waltz-ui/state-management": "*"
   },
   "devDependencies": {
