--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -11,23 +11,11 @@
       "node"
     ],
     "paths": {
-      "@sonata-api/common": [
-        "./node_modules/@sonata-api/common/dist"
-      ],
-      "@sonata-api/common/*": [
-        "./node_modules/@sonata-api/common/dist/*"
-      ],
-      "@sonata-api/types": [
-        "./node_modules/@sonata-api/types/dist"
-      ],
-      "@sonata-api/types/*": [
-        "./node_modules/@sonata-api/types/dist/*"
-      ],
-      "@sonata-api/system": [
-        "./node_modules/@sonata-api/system/dist"
-      ],
       "@waltz-ui/state-management": [
         "../state-management/dist"
+      ],
+      "@waltz-ui/i18n": [
+        "../i18n/dist"
       ],
       "waltz-build": [
         "../waltz-build/dist"
