feat: transition to new @waltz-ui/i18n package

--- a/packages/waltz-ui/tsconfig.json
+++ b/packages/waltz-ui/tsconfig.json
@@ -15,6 +15,9 @@
       ],
       "@waltz-ui/web": [
         "../web/dist"
+      ],
+      "@waltz-ui/i18n": [
+        "../i18n/dist"
       ]
     }
   }
