--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,7 @@ jobs:
         run: |
           pnpm --filter='./packages/waltz-build' build
           pnpm --filter='./packages/state-management' build
+          pnpm --filter='./packages/i18n' build
           pnpm --filter='./packages/web' build
           pnpm --filter='./packages/ui' build
           pnpm --filter='./packages/create-waltz-app' build
