--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@waltz-ui/ui",
   "type": "module",
-  "version": "1.0.25",
+  "version": "1.0.27",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,7 +19,7 @@
     "access": "public"
   },
   "exports": {
-    ".": "./src/index.ts",
+    ".": "./dist/ui.js",
     "./themes/*": "./themes/*",
     "./*": "./dist/*"
   },
@@ -31,7 +31,6 @@
     "maska": "^2.1.10"
   },
   "devDependencies": {
-    "@sonata-api/system": "*",
     "@sonata-api/types": "*",
     "@vitejs/plugin-vue": "^4.2.3",
     "vite": "^4.4.8",
