--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "core"]
+[submodule "packages/waltz-icons/core"]
 	path = packages/waltz-icons/core
 	url = https://github.com/phosphor-icons/core
