ci: fix site build

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
           pnpm --filter='./packages/create-waltz-app' build
           pnpm --filter='./packages/waltz-ui' build
       - name: Build icons site
-        run: cd packages/waltz-icons/app && vite build
+        run: cd packages/waltz-icons/app && pnpm build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
