--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "husky": "^8.0.3",
+    "stylelint": "^16.2.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-less": "^3.0.1",
     "typescript": "^5.3.0-beta"
   }
 }
