--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,8 @@
 {
-  "extends": "stylelint-config-standard",
-  "plugins": "stylelint-less"
+  "extends": "stylelint-config-idiomatic-order",
+  "customSyntax": "postcss-less",
+  "rules": {
+    "media-feature-range-notation": "context",
+    "property-no-unknown": true
+  }
 }
