--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "packageManager": "pnpm@8.7.6",
   "scripts": {
-    "postinstall": "husky install; rm -rf packages/*/node_modules/@waltz-ui",
+    "postinstall": "husky install; ln -s $(realpath packages) node_modules/@waltz-ui; rm -rf packages/*/node_modules/@waltz-ui",
     "lint-css": "stylelint 'packages/ui/**/*.less'",
     "lint-css:fix": "stylelint --fix 'packages/ui/**/*.less'"
   },
