--- a/packages/waltz-build/package.json
+++ b/packages/waltz-build/package.json
@@ -1,6 +1,7 @@
 {
   "name": "waltz-build",
   "version": "0.1.9",
+  "type": "module",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
