--- a/packages/waltz-icons/package.json
+++ b/packages/waltz-icons/package.json
@@ -1,6 +1,7 @@
 {
   "name": "waltz-icons",
   "version": "0.0.15",
+  "type": "module",
   "homepage": "https://sonata-api.github.io/waltz-icons",
   "description": "",
   "keywords": [],
@@ -34,12 +35,10 @@
       ]
     }
   },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "4.2.0"
-  },
-  "dependencies": {
-    "@phosphor-icons/core": "^2.0.6",
-    "glob": "^10.3.10"
+  "peerDependencies": {
+    "@phosphor-icons/core": "*",
+    "@vitejs/plugin-vue": "*",
+    "glob": "*",
+    "vite": "*"
   }
 }
