--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -24,7 +24,10 @@
   "exports": {
     ".": "./dist/index.js",
     "./stores": "./dist/stores/index.js",
-    "./types": "./dist/types/index.js"
+    "./types": "./dist/types/index.js",
+    "./vue": {
+      "types": "./vue.d.ts"
+    }
   },
   "typesVersions": {
     "*": {
