--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@waltz-ui/web",
   "type": "module",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -37,7 +37,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "vue.d.ts"
   ],
   "dependencies": {
     "@sonata-api/common": "*",
