--- a/packages/waltz-build/package.json
+++ b/packages/waltz-build/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src",
     "build": "tsc",
     "prepublishOnly": "pnpm build"
   },
