--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "packageManager": "pnpm@8.7.6",
   "scripts": {
     "postinstall": "husky install; ln -s $(realpath packages) node_modules/@waltz-ui; rm -rf packages/*/node_modules/@waltz-ui",
-    "lint": "eslint . --ignore-pattern packages/ui",
-    "lint:fix": "eslint . --ignore-pattern packages/ui --fix",
+    "lint": "pnpm -r lint",
+    "lint:fix": "pnpm -r lint --fix",
     "lint-css": "stylelint 'packages/ui/**/*.less'",
     "lint-css:fix": "stylelint --fix 'packages/ui/**/*.less'"
   },
