--- a/packages/waltz-icons/package.json
+++ b/packages/waltz-icons/package.json
@@ -17,6 +17,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src",
     "build": "tsc && node dist/__scripts__/bundleAllIcons.js",
     "prepublishOnly": "npm run build"
   },
