--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,9 +4,10 @@
   "version": "1.0.32",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src",
     "build": "tsc",
     "watch": "tsc --watch",
-    "prepublishOnly": "pnpm build",
+    "prepublishOnly": "pnpm lint && pnpm build",
     "postinstall": "node dist/__scripts__/postinstall.js || true"
   },
   "keywords": [],
