--- a/packages/create-aeria-app/package.json
+++ b/packages/create-aeria-app/package.json
@@ -5,6 +5,7 @@
   "license": "ISC",
   "scripts": {
     "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "build": "tsc && rm -rf templates/*/node_modules",
     "prepublishOnly": "pnpm lint && pnpm build"
   },
