--- a/packages/waltz-icons/package.json
+++ b/packages/waltz-icons/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "build": "tsc && node dist/__scripts__/bundleAllIcons.js",
     "prepublishOnly": "pnpm lint && pnpm build"
   },
