--- a/packages/waltz-ui/package.json
+++ b/packages/waltz-ui/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "build": "tsc",
     "prepublishOnly": "pnpm lint && pnpm build"
   },
